[gd_scene load_steps=17 format=3 uid="uid://sk60oqv1m7e5"]

[ext_resource type="Script" path="res://uitest.gd" id="1_86lbe"]
[ext_resource type="FontFile" uid="uid://elqbs3vvsyfp" path="res://sprites/fonts/GrapeSoda.ttf" id="2_4emdw"]
[ext_resource type="PackedScene" uid="uid://db7t7fgia3jr4" path="res://endScreenValues.tscn" id="3_sqgxv"]
[ext_resource type="PackedScene" uid="uid://chjjqmunyhn07" path="res://confettie.tscn" id="4_avjus"]
[ext_resource type="PackedScene" uid="uid://dbcp8i8r4pyss" path="res://confettieAngleR.tscn" id="5_jf0lf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqy74"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.133333, 0.12549, 0.203922, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bgjea"]
bg_color = Color(0.4263, 0.706063, 0.778342, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.133333, 0.12549, 0.203922, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
anti_aliasing = false

[sub_resource type="Gradient" id="Gradient_86coa"]
offsets = PackedFloat32Array(0, 0.0817308, 0.105769, 0.228365, 0.257212, 0.389423, 0.420673, 0.552885, 0.586538, 0.711538, 0.745192, 0.862981, 0.875)
colors = PackedColorArray(0.898039, 0.898039, 0.898039, 1, 0.898039, 0.898039, 0.898039, 1, 1, 0.364706, 0.8, 1, 1, 0.364706, 0.8, 1, 0.658824, 0.517647, 0.952941, 1, 0.658824, 0.517647, 0.952941, 1, 0.301961, 0.607843, 0.901961, 1, 0.301961, 0.607843, 0.901961, 1, 0.117647, 0.737255, 0.45098, 1, 0.117647, 0.737255, 0.45098, 1, 0.984314, 1, 0.52549, 1, 0.978039, 0.93098, 0.526275, 1, 0.952941, 0.654902, 0.529412, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a5i5i"]
gradient = SubResource("Gradient_86coa")

[sub_resource type="Gradient" id="Gradient_w51dq"]
offsets = PackedFloat32Array(0.925481, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_epjnf"]
gradient = SubResource("Gradient_w51dq")

[sub_resource type="Curve" id="Curve_peh6y"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.218468, 0.82343), 1.32428, 1.32428, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_a3ehp"]
curve = SubResource("Curve_peh6y")

[sub_resource type="Curve" id="Curve_lcsvp"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.745496, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.503396), -5.38982, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_liuqj"]
curve = SubResource("Curve_lcsvp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_85xfh"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(600, 1, 1)
direction = Vector3(-1, -1, 0)
initial_velocity_min = 330.0
initial_velocity_max = 430.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 75, 0)
linear_accel_min = 10.0
linear_accel_max = 30.0
damping_min = 74.0
damping_max = 78.0
damping_curve = SubResource("CurveTexture_a3ehp")
scale_min = 0.55
scale_max = 1.25
scale_curve = SubResource("CurveTexture_liuqj")
color_ramp = SubResource("GradientTexture1D_epjnf")
color_initial_ramp = SubResource("GradientTexture1D_a5i5i")
anim_speed_min = 8.0
anim_speed_max = 12.0
anim_offset_max = 1.0

[node name="endScreenUI" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 34.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_86lbe")

[node name="Level End Screen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -48.0
offset_right = 20.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="levelcompletetext" type="Control" parent="Level End Screen"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -422.5
offset_top = -591.0
offset_right = 422.5
offset_bottom = -543.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(422.5, 24)

[node name="PanelContainer" type="Panel" parent="Level End Screen/levelcompletetext"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 212.0
offset_right = -209.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tqy74")

[node name="L" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -24.0
offset_right = -177.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "L"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="E" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 250.0
offset_right = 274.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "E"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="V" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 278.0
offset_right = 302.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "V"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="E2" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 306.0
offset_right = 330.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "E"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="L2" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 334.0
offset_right = 355.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "L"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="space" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 359.0
offset_right = 374.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = " "
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="C" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 378.0
offset_right = 402.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "C"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="O" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 406.0
offset_right = 430.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "O"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="M" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 434.0
offset_right = 467.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "M"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="P" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 471.0
offset_right = 495.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "P"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="L3" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 499.0
offset_right = 520.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "L"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="E3" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 524.0
offset_right = 548.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "E"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="T" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 552.0
offset_right = 576.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "T"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="E4" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 580.0
offset_right = 604.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "E"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="mark" type="RichTextLabel" parent="Level End Screen/levelcompletetext"]
z_index = 3
layout_mode = 2
offset_left = 608.0
offset_right = 620.0
offset_bottom = 48.0
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0.133333, 0.12549, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0.533333, 0.772549, 0.686275, 1)
theme_override_fonts/normal_font = ExtResource("2_4emdw")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "!"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="LevelEndScreenCon" type="PanelContainer" parent="Level End Screen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = 23.0
offset_right = 320.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(320, 100)
theme_override_styles/panel = SubResource("StyleBoxFlat_bgjea")

[node name="EndScreenValues" parent="." instance=ExtResource("3_sqgxv")]
layout_mode = 1
offset_left = -220.0
offset_top = -520.0
offset_right = -220.0
offset_bottom = -520.0

[node name="Confettie" parent="." instance=ExtResource("4_avjus")]
position = Vector2(1, -700)

[node name="Confettie2" parent="." instance=ExtResource("5_jf0lf")]
z_index = 100
position = Vector2(-601, 3)
emitting = false
amount = 400
one_shot = true

[node name="Confettie3" parent="." instance=ExtResource("5_jf0lf")]
z_index = 100
position = Vector2(601, 3)
emitting = false
amount = 400
process_material = SubResource("ParticleProcessMaterial_85xfh")
one_shot = true
